--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,7 +16,7 @@ const { title, description, permalink } = Astro.props;
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
-<meta name="title" content={title} />
+<meta name="title" content={title} | The Wilkin Family Cookbook/>
 <meta name="description" content={description} />
 
 <!-- Open Graph / Facebook -->
