--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -8,6 +8,7 @@ const { post } = Astro.props;
 
 <article class="post-preview">
 	<header>
+		{post.frontmatter.image && <img width="720" height="420" class="hero-image" loading="lazy" src={post.frontmatter.image} alt={post.frontmatter.alt} />}
 		<p class="publish-date">{post.frontmatter.publishDate}</p>
 		<a href={post.url}><h1 class="title">{post.frontmatter.title}</h1></a>
 	</header>
@@ -18,6 +19,15 @@ const { post } = Astro.props;
 <style>
 	.content :global(main > * + *) {
 		margin-top: 1rem;
+	}
+	.hero-image {
+		width: 100vw;
+		height: 20vw;
+		object-fit: cover;
+		object-position: center;
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+		max-width: 1280px;
 	}
 
 	.post-preview {
