--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -1,14 +1,13 @@
 ---
 export interface Props {
 	name: string;
-	href: string;
 }
 
-const { name, href } = Astro.props;
+const { name } = Astro.props;
 ---
 
 <div class="author">
-	<p><a {href}>{name}</a></p>
+	<p>Author: {name}</p>
 </div>
 
 <style>
